--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Code Quiz</title>
 </head>
-<body>
-    <div class="content position-relative p-3 mb-2 bg-dark text-white w-100 p-3">
-        <div class="highscore-view position-absolute top-0 start-0 border border-primary border-3 p-2 m-4" ><p>View Highscores</p></div>
+<body class="position-relative p-3 mb-2 bg-dark text-white w-100 p-3 h-100 d-inline-block">
+    <div class="content position-relative">
+        <div class="highscore-view position-absolute top-0 start-0 border border-primary border-3 p-2 m-4" ><h3>View Highscores</h3></div>
         <h3 class="timer row position-absolute top-0 end-0 border border-primary border-3 p-2 m-4">Time: 0</h3>
         <div class="quiz-box">
             <h1 class="question p-3 mb-2 bg-primary text-white" style="text-align: center;">Coding Quiz Challenge
